# unisbom

./: .gitignore  Cargo.toml  README.md
src/: collector.rs  component.rs  format.rs  main.rs  utils.rs
src/macos/: mod.rs
src/windows/: api.rs  mod.rs
