[package]
name = "unisbom"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.22", features = ["serde"] }
clap = { version = "3.2.20", features = ["derive"] }
log = "0.4.17"
pretty_env_logger = "0.4.0"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = { version = "0.10.1", features = ["chrono"] }
csv = "1.1.6"
