[package]
name = "unisbom"
version = "0.1.0"
edition = "2021"
description = "Build a software bill of materials (SBOM) on any platform."
authors = ["Simone Margaritelli <evilsocket@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/evilsocket/unisbom"

[dependencies]
chrono = { version = "0.4.22", features = ["serde"] }
clap = { version = "3.2.20", features = ["derive"] }
log = "0.4.17"
pretty_env_logger = "0.4.0"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = { version = "0.10.1", features = ["chrono"] }
windows = { version = "0.39.0", features = ["Win32_Storage_FileSystem", "Win32_Foundation"] }
csv = "1.1.6"
